including Ghadi's code